# SummerIQ

./: .gitignore  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  railway.toml  tailwind.config.ts  vite.config.ts
backend/src/: main.rs
backend/src/routes/: upload.rs
backend/src/services/: storage.rs
backend/src/storage/: s3.rs
docs/: README.md  TODO.md  contributing.md  getting-started.md  overview.md
docs/api/: README.md
docs/features/: README.md  ai-integration.md  project-analysis.md
docs/frontend/: README.md
docs/getting-started/: quick-start.md
docs/guides/: junior-developers.md  project-understanding.md
docs/technical/: README.md  architecture.md
src/: App.tsx  index.css  vite-env.d.ts
src/api/: chat.ts  client.ts  documentation.ts  upload.ts
src/components/: FileUpload.vue  FileViewer.tsx  MermaidRenderer.tsx
src/components/analysis/: AIAnalysis.tsx
src/components/auth/: AuthForm.tsx
src/components/chat/: ChatInterface.tsx
src/lib/: api.ts  prism-themes.ts
src/pages/: About.tsx  Architecture.tsx  Dashboard.tsx  Index.tsx  NotFound.tsx
src/types/: api.ts  react-mermaid2.d.ts
summeriq-backend/: .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml  railway.toml
summeriq-backend/migrations/: 20240320000000_create_files_table.sql  20240320000000_create_uploads_table.sql  20240320000000_create_users.sql  20240320000000_initial.sql  20240320000000_initial_schema.sql  20240321000000_add_extracted_files.sql
summeriq-backend/src/: auth_middleware.rs  config.rs  db.rs  error.rs  lib.rs  loggin.rs  logging.rs  main.rs  storage.rs
summeriq-backend/src/handlers/: analysis.rs  auth.rs  documentation.rs  mod.rs  upload.rs
summeriq-backend/src/middleware/: auth.rs
summeriq-backend/src/migrations/: 20240320000000_initial.sql
summeriq-backend/src/models/: file.rs  message.rs  mod.rs  session.rs  upload.rs  user.rs
summeriq-backend/src/routes/: analysis.rs  auth.rs  chat.rs  documentation.rs  health.rs  mod.rs  upload.rs
summeriq-backend/src/services/: ai.rs  analysis.rs  auth.rs  mod.rs  storage.rs
summeriq-backend/src/test/: auth_test.rs  integration_test.rs
(+17 files in other folders)
