[package]
name = "summeriq-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
actix-files = "0.6"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
zip = "0.6"
tempfile = "3.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
mime_guess = "2.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
derive_more = "0.99"